<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LakhmaniukHometask3</string>
    <string name="btn_ok">Okay</string>
    <string name="btn_cancel">Cancel</string>
    <string name="item1">Person</string>
    <string name="item2">Message</string>
    <string name="item3">Favorites</string>
    <string name="item4">Search</string>
    <string name="btn_anim_page">Animation Page</string>
    <string name="btn_back">Back To Main Page</string>
    <string name="tv">Animation</string>
    <string name="btn_name_one">Animation 1</string>
    <string name="btn_name_two">Animation 2</string>
    <string name="btn_name_three">Animation 3</string>
    <string name="btn_name_four">Animation 4</string>
    <string name="btn_name_five">Animation 5</string>

    <string name="action_search">Search</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string-array name="headers">
        <item>Поле 1</item>
        <item>Поле 2</item>
        <item>Поле 3</item>
        <item>Поле 4</item>
    </string-array>
    <string-array name="content">
        <item>Тут что то может быть 1</item>
        <item>Тут что то может быть 1</item>
        <item>Тут что то может быть 1</item>
        <item>Тут что то может быть 1</item>
    </string-array>

    <string name="btn_page3">Страница с реализацией Multiple Screen</string>


</resources>
