<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_websearch"
          android:icon="@drawable/action_search"
          android:title="@string/action_websearch"
          android:showAsAction="ifRoom|withText" />


    <item
        android:id="@+id/item1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/item1"
        android:icon="@drawable/icon_person">
    </item>

    <item
        android:id="@+id/item2"
        android:title="@string/item2"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/icon_message">
    </item>

    <item
        android:id="@+id/item3"
        android:title="@string/item3"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/icon_favorites">
    </item>

    <item
        android:id="@+id/item4"
        android:title="@string/item4"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/icon_search">
    </item>

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:showAsAction="ifRoom"/>



</menu>