<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    style="@style/AppTheme">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_one"
        android:id="@+id/button"
        android:padding="15dp"
        android:onClick="onAnimationImageOne" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_two"
        android:id="@+id/button2"
        android:padding="15dp"
        android:onClick="onAnimationImageTwo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_three"
        android:id="@+id/button3"
        android:padding="15dp"
        android:onClick="onAnimationImageThree"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_four"
        android:id="@+id/button4"
        android:padding="15dp"
        android:onClick="onAnimationImageFour"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_five"
        android:id="@+id/button5"
        android:padding="15dp"
        android:onClick="onAnimationImageFive"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/android_img"
        android:layout_above="@+id/btn_back"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:id="@+id/btn_back"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="goToMain" />

</RelativeLayout>



